remove raiseError, add types, update docs

--- a/examples/input/index.html
+++ b/examples/input/index.html
@@ -18,10 +18,10 @@
 
 <body>
     <div class="container mt-3">
-        <h1 class="mb-3">Test</h1>
+        <h1 class="mb-3">Fetch and cache responses</h1>
 
         <div class="mb-2">Status: <span id="status"></span></div>
-        <input type="text" class="form-control" placeholder="Input number" id="input" />
+        <input type="text" class="form-control" placeholder="Input comment id (1..21)" id="input" />
         <div class="text-danger mt-1" id="error"></div>
         <div id="output" class="mt-3 "></div>
 
